unityにはJSON.stringifyして送る

--- a/web/point.html
+++ b/web/point.html
@@ -13,12 +13,13 @@ table td.right{text-align:right;}
 </head>
 
 <body>
-<div style="width:100%; text-align:right; padding-right:2em;">
+<div style="width:90%; text-align:right; padding-right:2em;">
   <span class="big_bold" style="margin-right:0.4em;">総獲得ポイント</span>
   <span id="total_point">0</span>
   <span>ポイント</span>
 </div>
-<table style="margin:10px auto;">
+<table class="pure-table pure-table-striped" style="margin:10px auto;">
+<thead>
  <tr>
   <th>商品イメージ</th>
   <th>必要ポイント</th>
@@ -27,6 +28,8 @@ table td.right{text-align:right;}
   <th>装着箇所</th>
   <th>説明</th>
  </tr>
+ </thead>
+ <tbody>
  <tr>
   <td><img src="img/1.png" alt="画像1"></td>
   <td class="right">50</td>
@@ -59,6 +62,7 @@ table td.right{text-align:right;}
   <td>車の屋根に固定</td>
   <td>重さ20グラム。車の屋根に乗っけるアナタはいかれてます。</td>
  </tr>
+ </tbody>
 </table>
 
 <script type="text/javascript">
