--- a/web/red.html
+++ b/web/red.html
@@ -3,14 +3,9 @@
 <head>
 <title>redさんの戦歴</title>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<link rel="stylesheet" href="css/all_pure.css" />
 
 <style>
-* { margin: 0; padding: 0; box-sizing: border-box; }
-body { font: 13px Helvetica, Arial; padding:20px;}
-table{border: solid 1px #000000; border-collapse:collapse;}
-table th, table td{border: solid 1px #000000; padding: 0.4em;}
-table th{font-weight:bold; text-align:center;}
-table td{text-align:left;}
 table td.right{text-align:right;}
 .big_bold{font-size:160%; font-weight:bold;}
 </style>
