--- a/web/red.html
+++ b/web/red.html
@@ -46,7 +46,7 @@ jQuery(function(){
       }
 
       var html = '';
-      html += '<table style="margin:10px 20px;">';
+      html += '<table class="pure-table pure-table-striped" style="margin:10px 20px;">';
       html += '<tr>';
       html += '<th>対戦日時</th>';
       html += '<th>対戦相手</th>';
