50がけダメージ

--- a/web/point.html
+++ b/web/point.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="css/all_pure.css" />
 
 <style>
+body{padding:20px;}
 table td.right{text-align:right;}
 .big_bold{font-size:160%; font-weight:bold;}
 </style>
